Kubernetes/myns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myns
  labels:
    name: myns
