Kubernetes/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: app-tier-ns
   labels:
     app: java
