Kubernetes/app.yaml
apiVersion: v1
kind: Pod
metadata:
        name: app-pods
        labels:
                app: java
spec:
  containers:
    #Container 01
  - name: httpd-container
    image: httpd
    ports:
    - containerPort: 80
    #Container 02
  - name: java-app
    image: springio/gs-spring-boot-docker
    ports:
    - containerPort: 80
