Kubernetes/pod.yaml
kind: Pod
apiVersion: v1
metadata:
    name: mypod
spec:
   containers:
      - name: c00
        image: httpd
        ports:
         - containerPort: 80
